compatibilité rei v0.1.1